# pbts

./: .gitignore  .gitmodules  Dockerfile  README.md  bep10_extension.py  deploy_factory.sh  docker-compose.yaml  requirements.txt  run_e2e_test.sh  tee_manager.py  test_quote_verification.py  tracker.py
.github/workflows/: docker-build.yml
docs/: BEP10_IMPLEMENTATION.md  TEE_INTEGRATION.md
experiments/: README.md  benchmark_client_download.py  benchmark_gas.py  benchmark_receipts.py  benchmark_scalability.py  benchmark_tee.py  benchmark_tracker_overhead.py  run_all_experiments.py
pbts-rs/: Cargo.toml
pbts-rs/crates/pbts-bench/: Cargo.toml
pbts-rs/crates/pbts-bench/src/: bench_download.rs  bench_gas.rs  bench_receipts.rs  bench_scale.rs  bench_tee.rs  lib.rs  main.rs
pbts-rs/crates/pbts-core/: Cargo.toml
pbts-rs/crates/pbts-core/src/: contract.rs  crypto.rs  lib.rs  receipt.rs  types.rs
pbts-rs/crates/pbts-tee/: Cargo.toml
pbts-rs/crates/pbts-tee/src/: manager.rs
pbts-rs/crates/pbts-tracker/: Cargo.toml
pbts-rs/crates/pbts-tracker/src/: main.rs  state.rs
pbts-rs/crates/pbts-tracker/src/routes/: announce.rs  contract.rs  crypto.rs  mod.rs  register.rs  report.rs  scrape.rs  tee.rs
smartcontract/: README.md
smartcontract/script/: Deploy.s.sol
smartcontract/src/: Reputation.sol  factory.sol
smartcontract/test/: Reputation.t.sol  factory.t.sol
tests/: E2E_README.md  __init__.py  example_bep10_client.py
tests/e2e/: __init__.py  e2e_test.py  example_bep10_client.py  pbts_client.py
tests/unit/: __init__.py  test_bep10.py  test_bep10_integration.py  test_smartcontract.py  test_tee_manager.py  test_tracker.py
tests/utils/: __init__.py  torrent_generator.py
