[workspace]
resolver = "2"
members = [
    "crates/pbts-core",
    "crates/pbts-tee",
    "crates/pbts-tracker",
    "crates/pbts-bench",
]

[workspace.dependencies]
# Crypto
blst = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Blockchain (alloy)
alloy = { version = "1.0", features = ["full", "node-bindings"] }

# TEE
dstack-sdk = { git = "https://github.com/Dstack-TEE/dstack.git" }

# BitTorrent
serde_bencode = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
pbts-core = { path = "crates/pbts-core" }
pbts-tee = { path = "crates/pbts-tee" }
