[package]
name = "pbts-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
