[package]
name = "pbts-tee"
version = "0.1.0"
edition = "2021"

[dependencies]
pbts-core = { workspace = true }
dstack-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
blst = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
