[package]
name = "pbts-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
pbts-core = { workspace = true }
pbts-tee = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bencode = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
